syntax = "proto3";

package CLIPPY.control;

import "ControlTarget.proto";
import "ControlGains.proto";
import "ControlStyle.proto";
import "google/protobuf/empty.proto";

service RobotController {
    rpc SubmitControlTarget(ControlTarget) returns (google.protobuf.Empty) {}
    rpc SubmitControlGains(ControlGains) returns (google.protobuf.Empty) {}
    rpc SetControlStyle(ControlStyle) returns (google.protobuf.Empty) {}
}